--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
 .devspoiler_bar{position:fixed;text-align:center;bottom:0;left:0;right:0;z-index:99;color:#fff;padding:5px}
 .devspoiler_dev{background:green}
 .devspoiler_pro{background:red}
+.devspoiler_test{background:orange}
